message MessageMetaLayerMessage {
  map<string, uint64> vectorClock = 1;
  required uint64 wallClockTime = 2;
  required uint64 lamportTimestamp = 3;
}
